--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "contentful": "^3.8.1",
+    "material-components-web": "^0.11.1",
     "vue": "^2.2.2",
     "vue-resource": "^1.2.1",
     "vue-router": "^2.3.0"
