--- a/package.json
+++ b/package.json
@@ -7,14 +7,12 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
-    "lint": "eslint --ext .js,.vue src",
-    "deploy": "gh-pages -d dist"
+    "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "@material/animation": "^0.3.1",
     "contentful": "^3.8.1",
     "marked": "^0.3.6",
-    "material-components-web": "^0.11.1",
+    "material-components-web": "^0.21.0",
     "moment": "^2.18.1",
     "vue": "^2.2.2",
     "vue-resource": "^1.2.1",
@@ -27,6 +25,7 @@
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.2.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "chalk": "^1.1.3",
@@ -46,7 +45,6 @@
     "file-loader": "^0.10.0",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "function-bind": "^1.1.0",
-    "gh-pages": "^1.0.0",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "node-sass": "^4.5.0",
