--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "contentful": "^3.8.1",
     "marked": "^0.3.6",
     "material-components-web": "^0.21.0",
     "moment": "^2.18.1",
+    "prerender-spa-plugin": "^2.1.0",
     "vue": "^2.2.2",
     "vue-resource": "^1.2.1",
     "vue-router": "^2.3.0"
