--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "@material/typography": "^0.3.0",
     "babel-polyfill": "^6.26.0",
     "contentful": "^3.8.1",
     "marked": "^0.3.6",
@@ -54,6 +55,7 @@
     "ora": "^1.1.0",
     "rimraf": "^2.6.0",
     "sass-loader": "^6.0.3",
+    "sass-resources-loader": "^1.3.1",
     "semver": "^5.3.0",
     "style-loader": "^0.14.1",
     "url-loader": "^0.5.7",
