--- a/package.json
+++ b/package.json
@@ -10,63 +10,63 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "@material/typography": "^0.3.0",
+    "@material/typography": "^0.28.0",
     "babel-polyfill": "^6.26.0",
-    "contentful": "^3.8.1",
-    "marked": "^0.3.6",
-    "material-components-web": "^0.21.1",
+    "contentful": "^5.1.3",
+    "marked": "~0.3.9",
+    "material-components-web": "^0.31.0",
     "moment": "^2.18.1",
-    "prerender-spa-plugin": "^2.1.0",
+    "prerender-spa-plugin": "^2.0.2",
     "vue": "^2.4.4",
     "vue-resource": "^1.3.4",
-    "vue-router": "^2.7.0"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.2",
+    "autoprefixer": "^8.1.0",
     "babel-core": "^6.22.1",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.10",
+    "babel-eslint": "^8.2.2",
+    "babel-loader": "^7.1.3",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.2.1",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
-    "chalk": "^1.1.3",
+    "chalk": "^2.3.2",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.26.4",
+    "css-loader": "^0.28.10",
     "eslint": "^4.8.0",
     "eslint-config-airbnb-base": "^12.0.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-import-resolver-webpack": "^0.8.1",
-    "eslint-loader": "^1.6.1",
-    "eslint-plugin-html": "^3.2.2",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-html": "^4.0.2",
     "eslint-plugin-import": "^2.2.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^2.0.0",
-    "file-loader": "^0.10.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "function-bind": "^1.1.0",
-    "html-webpack-plugin": "^2.28.0",
+    "html-webpack-plugin": "^3.0.4",
     "http-proxy-middleware": "^0.17.3",
     "node-sass": "^4.5.0",
-    "opn": "^4.0.2",
-    "optimize-css-assets-webpack-plugin": "^1.3.0",
-    "ora": "^1.1.0",
+    "opn": "^5.2.0",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "ora": "^2.0.0",
     "rimraf": "^2.6.0",
     "sass-loader": "^6.0.3",
     "sass-resources-loader": "^1.3.1",
     "semver": "^5.3.0",
-    "style-loader": "^0.14.1",
-    "url-loader": "^0.5.7",
-    "vue-loader": "^11.1.4",
+    "style-loader": "^0.20.2",
+    "url-loader": "^1.0.1",
+    "vue-loader": "^14.1.1",
+    "vue-style-loader": "^4.0.2",
     "vue-template-compiler": "^2.0.0",
-    "vue-style-loader": "^2.0.0",
-    "webpack": "^2.2.1",
+    "webpack": "^4.1.0",
     "webpack-bundle-analyzer": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.0",
+    "webpack-dev-middleware": "^3.0.0",
     "webpack-hot-middleware": "^2.16.1",
-    "webpack-merge": "^2.6.1"
+    "webpack-merge": "^4.1.2"
   },
   "engines": {
     "node": ">= 6.0.0",
