--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "@material/animation": "^0.25.0",
+    "@material/card": "^0.32.0",
     "@material/typography": "^0.28.0",
     "babel-polyfill": "^6.26.0",
     "contentful": "^5.1.3",
     "marked": "~0.3.9",
     "material-components-web": "^0.31.0",
-    "moment": "^2.18.1",
+    "moment": "~2.19.3",
     "prerender-spa-plugin": "^2.0.2",
     "vue": "^2.4.4",
     "vue-resource": "^1.3.4",
@@ -69,7 +71,7 @@
     "webpack-merge": "^4.1.2"
   },
   "engines": {
-    "node": ">= 6.0.0",
+    "node": ">= 6.11.5",
     "npm": ">= 2.14.3"
   },
   "browserslist": [
