--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "contentful-portfolio",
+  "name": "kristofferdarj-portfolio",
   "version": "1.0.0",
-  "description": "A Vue.js portfolio connected to contentful",
+  "description": "A Vue.js portfolio",
   "author": "Kristoffer Darj <kristoffer.darj@gmail.com>",
   "private": true,
   "scripts": {
@@ -14,14 +14,11 @@
     "@material/card": "^0.32.0",
     "@material/typography": "^0.28.0",
     "babel-polyfill": "^6.26.0",
-    "contentful": "^5.1.3",
-    "marked": "~0.3.9",
+    "marked": "~>0.3.9",
     "material-components-web": "^0.31.0",
-    "moment": "~2.19.3",
-    "prerender-spa-plugin": "^2.0.2",
     "vue": "^2.4.4",
-    "vue-resource": "^1.3.4",
-    "vue-router": "^3.0.1"
+    "vue-i18n": "^8.0.0",
+    "vue-resource": "^1.3.4"
   },
   "devDependencies": {
     "autoprefixer": "^8.1.0",
