--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "vue-style-loader": "^4.0.2",
     "vue-template-compiler": "^2.0.0",
     "webpack": "^4.1.0",
-    "webpack-bundle-analyzer": "^2.2.1",
+    "webpack-bundle-analyzer": "~> 3.3.2",
     "webpack-dev-middleware": "^3.0.0",
     "webpack-hot-middleware": "^2.16.1",
     "webpack-merge": "^4.1.2"
